# cpp-mental-models

./: CMakeLists.txt  LICENSE  README.en.md  README.md  README_EN.md  doc.md
.github/workflows/: cmake.yml
modules/build-type/: CMakeLists.txt
modules/callable-objects/: CMakeLists.txt
modules/clockwise-spiral/: CMakeLists.txt
modules/dynamic-static-libs/: CMakeLists.txt
modules/memory-segmentation/: CMakeLists.txt
modules/move-semantics/: CMakeLists.txt
modules/namespaces/: CMakeLists.txt
modules/oop/: CMakeLists.txt
