cmake_minimum_required(VERSION 3.15)
project(cpp-mental-models)


set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)

include(CTest)
set(CPP_MENTAL_MODELS_BUILD_TESTING ${BUILD_TESTING})


set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/bin)
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/lib)
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/lib)


set(CMAKE_WINDOWS_EXPORT_ALL_SYMBOLS ON)

function(add_demo_test TARGET_NAME)
    if(CPP_MENTAL_MODELS_BUILD_TESTING)
        add_test(NAME ${TARGET_NAME} COMMAND $<TARGET_FILE:${TARGET_NAME}>)
        set_tests_properties(${TARGET_NAME} PROPERTIES LABELS demo)
    endif()
endfunction()

add_subdirectory(modules)
